--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_for_bottom_navigation_view"
         tools:context=".MainActivity"
+        android:background="@android:color/white"
         app:itemIconTint="@drawable/bottom_navigation_item_background_colors"
         app:itemTextColor="@drawable/bottom_navigation_item_background_colors"/>
 </android.support.constraint.ConstraintLayout>
