--- a/app/src/main/res/layout/photocard_list_layout.xml
+++ b/app/src/main/res/layout/photocard_list_layout.xml
@@ -2,66 +2,68 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="190dp"
-    android:layout_height="190dp">
-
+    android:orientation="vertical"
+    android:layout_width="207dp"
+    android:layout_height="207dp">
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/imageCard"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/test"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:foregroundGravity="bottom|fill_horizontal"
+        android:scaleType="centerCrop"
+        android:src="@drawable/test_"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:scaleType="centerCrop"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/imageFavorit"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
-        android:src="@drawable/ic_star_border_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageCard"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/gradient_for_photocard"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/countFavoritLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="0"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/imageCard"
-        app:layout_constraintStart_toEndOf="@+id/imageFavorit" />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/imageFavorit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:src="@drawable/ic_star_border_black_24dp"/>
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/imageWatching"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginRight="60dp"
-        android:src="@drawable/ic_visibility_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageCard"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintEnd_toEndOf="@+id/imageCard" />
+        <TextView
+            android:id="@+id/countFavoritLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="0"
+            android:textColor="@android:color/white"/>
 
-    <TextView
-        android:id="@+id/countWatchingLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="0"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/imageCard"
-        app:layout_constraintStart_toEndOf="@+id/imageWatching" />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/imageWatching"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="40dp"
+            android:src="@drawable/ic_visibility_black_24dp"
+            android:layout_marginLeft="40dp" />
+
+        <TextView
+            android:id="@+id/countWatchingLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="0"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
