--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -4,10 +4,10 @@
     <item
         android:drawable="@android:color/darker_gray"/>
 
-    <item>
+    <item android:gravity="bottom">
         <bitmap
             android:gravity="center"
-            android:src="@drawable/ic_launcher"/>
+            android:src="@drawable/ic_launcher" />
     </item>
 
 </layer-list>
