--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -4,7 +4,7 @@
     <item
         android:drawable="@android:color/darker_gray"/>
 
-    <item android:gravity="bottom">
+    <item>
         <bitmap
             android:gravity="center"
             android:src="@drawable/ic_launcher" />
